--- a/future.html
+++ b/future.html
@@ -23,9 +23,26 @@
     </div>
 
     <div class="content">
-        <h1>Cryptocurrency</h1>
-        <img src="howDo.webp" style="padding: 5% 20%; width: 100%; height: auto; border-radius: 10px;">
-    </div>
+        <h1 id="headH1">Future</h1>
+        <h2>Cryptocurrency</h2>
+        <img id="HowBitcoin" src="howDo.webp" style="padding: 5% 20%; width: 100%; height: auto; border-radius: 10px;">
+        <p>Cryptocurrency is a digital or virtual form of currency that uses 
+           cryptography for security. Unlike traditional currencies issued by 
+           governments, cryptocurrencies operate on decentralized networks called 
+           blockchains.
+        </p>
+        <h3>Blockchain</h3>
+        <p>
+            Cryptocurrencies rely on blockchain technology, which is a distributed 
+            ledger that records all transactions across a network of computers. Each 
+            transaction is grouped into a "block" and added to a chain of previous blocks, 
+            creating a permanent and transparent record.
+        </p>
+    </div> 
+
+    <script>
+
+    </script>
 
     </body>
 </html>
