--- a/negatives.html
+++ b/negatives.html
@@ -23,10 +23,15 @@
     </div>
 
     <div class="content">
-        <h1>Cybersecurity</h1>
-        <p>Although there are many regulations</p>
-        <h1>Internet reliant</h1>
-        <p>For Online Banking</p>
+        <h1 id="headH1">Negatives</h1>
+        <h2>Cybersecurity</h2>
+            <p>Although there are many regulations put in place to protect online users, such as Regulation E which protects users when they are using Electronic funds, which is basically all online transactions</p>
+            <p>There are still serious risks that are posed to consumers when they are online. People can get your account info, and exploit your information.</p>
+            <p>Those who arent technologically versed should be worried about scams. Someone who knows that you arent very technological can try and get you to give them money, permission to things they shouldnt have permission to, plus many other bad things.</p>
+        <h2>Internet reliance</h2>
+            <p>Now more than ever the internet runs the world. Banking is just a part of the world that follows that rule. Online banking depends on technology for it to even exist.</p>
+            <p>Internet reliance also provides more opportunities for users to be vulnerable to cyber threats such as phishing, hackers. Which leads to privacy breaches and data leaks</p>
+            <p>Online, whether by overdrafting or simply missing payments, it is simpler to overpay. Due to more consumers using the Buy Now Pay Later services made possible by online banking, there are now more missed payments.</p>
     </div>
 
     </body>
