--- a/future.html
+++ b/future.html
@@ -16,7 +16,7 @@
     </div>
 
     <div id="navbar">
-        <a href="Home.html" class="nav-tab" id="home">Home</a>
+        <a href="index.html" class="nav-tab" id="home">Home</a>
         <a href="positives.html" class="nav-tab" id="pos">Positives</a>
         <a href="negatives.html" class="nav-tab" id="neg">Negatives</a>
         <a href="future.html" class="nav-tab active" id="future">Future</a>
@@ -38,10 +38,46 @@
             transaction is grouped into a "block" and added to a chain of previous blocks, 
             creating a permanent and transparent record.
         </p>
+        <h3>Mining</h3>
+        <p>
+            Mining is the process by which new cryptocurrency coins are created and transactions 
+            are confirmed. Miners use powerful computers to solve mathematical problems, and the 
+            first miner to solve the puzzle adds the next block to the blockchain. 
+        </p>
+        <h3>Decentralization</h3>
+        <p>
+
+        </p>
     </div> 
 
-    <script>
+    <div id="quiz">
+        <h3>Question 1</h3>
+        <p><b>What is the name of the technology that cryptocurrencies rely on?</b></p>
+        <input class="ans" type="radio" name="question1">Cryptography<br></input>
+        <input class="ans" type="radio" name="question1" id="correct1">Blockchain<br></input>
+        <input class="ans" type="radio" name="question1">Bitcoin<br></input>
+        <input class="ans" type="radio" name="question1">Keyboard<br></input>
+        <h3>Question 2</h3>
+        <p>filler question</p>
+        <input class="ans" type="radio" name="question2"><br></input>
+        <input class="ans" type="radio" name="question2" ><br></input>
+        <input class="ans" type="radio" name="question2"><br></input>
+        <input class="ans" type="radio" name="question2" id="correct2"><br></input>
+        <input type="submit" name="submit" value="Submit" id="submitB" onclick="result()">
+    </div>
+    
 
+    <script type="text/javascript">
+        function result() {
+            var score=0;
+            if (document.getElementById('correct1').checked){
+                score++;
+            }
+            if (document.getElementById('correct2').checked){
+                score++;
+            }
+            alert("Your score is: " + score + "/2");
+        }
     </script>
 
     </body>
