--- a/positives.html
+++ b/positives.html
@@ -16,7 +16,7 @@
     </div>
 
     <div id="navbar">
-        <a href="Home.html" class="nav-tab" id="home">Home</a>
+        <a href="index.html" class="nav-tab" id="home">Home</a>
         <a href="positives.html" class="nav-tab active" id="pos">Positives</a>
         <a href="negatives.html" class="nav-tab" id="neg">Negatives</a>
         <a href="future.html" class="nav-tab" id="future">Future</a>
@@ -49,16 +49,16 @@
     <div id="quiz">
         <h3>Question 1</h3>
         <p>filler text</p>
-        <input type="radio" name="question1"><br></input>
-        <input type="radio" name="question1" id="correct1"><br></input>
-        <input type="radio" name="question1"><br></input>
-        <input type="radio" name="question1"><br></input>
+        <input class="ans" type="radio" name="question1">1<br></input>
+        <input class="ans" type="radio" name="question1" id="correct1">2<br></input>
+        <input class="ans" type="radio" name="question1">3<br></input>
+        <input class="ans" type="radio" name="question1">4<br></input>
         <h3>Question 2</h3>
         <p>filler question</p>
-        <input type="radio" name="question2"><br></input>
-        <input type="radio" name="question2" ><br></input>
-        <input type="radio" name="question2"><br></input>
-        <input type="radio" name="question2" id="correct2"><br></input>
+        <input class="ans" type="radio" name="question2"><br></input>
+        <input class="ans" type="radio" name="question2" ><br></input>
+        <input class="ans" type="radio" name="question2"><br></input>
+        <input class="ans" type="radio" name="question2" id="correct2"><br></input>
         <input type="submit" name="submit" value="Submit" id="submitB" onclick="result()">
     </div>
     
