--- a/future.html
+++ b/future.html
@@ -25,11 +25,16 @@
     <div class="content">
         <h1 id="headH1">Future</h1>
         <h2>Cryptocurrency</h2>
-        <img id="HowBitcoin" src="howDo.webp" style="padding: 5% 20%; width: 100%; height: auto; border-radius: 10px;">
+        <img id="HowBitcoin" alt="How Do Bitcoins Work?" src="howDo.webp" style="padding: 5% 20%; width: 100%; height: auto; border-radius: 10px;">
         <p>Cryptocurrency is a digital or virtual form of currency that uses 
            cryptography for security. Unlike traditional currencies issued by 
            governments, cryptocurrencies operate on decentralized networks called 
            blockchains.
+        </p>
+        <p>
+            Computers have devloped at an incredible rate and as technology continues 
+            to grow, it will become faster, more secure, more integrated, and more 
+            people will adopt it as it becomes increasingly user friendly.
         </p>
         <h3>Blockchain</h3>
         <p>
@@ -46,23 +51,40 @@
         </p>
         <h3>Decentralization</h3>
         <p>
-
+            Cryptocurrencies are decentralized, meaning they are not controlled by a central authority 
+            like a government or bank. The distributed nature of blockchain ensures that no single entity 
+            has complete control over the network, making it more secure and resistant to hacking or fraud.
         </p>
+        <p>
+            Many cryptocurrencies have gain popularity because they can be used as a medium of exchange, 
+            investment asset, and there is no need for intermediaries. 
+        </p>
+        <h3>Digital Wallets</h3>
+        <p>
+            To hold and manage cryptocurrencies, users need a digital wallet. A wallet consists of a public 
+            key (similar to a bank account number) and a private key (like a password). The public key is 
+            used to receive funds, while the private key is required to access and transfer the funds.
+        </p>
+        <p>
+            There are many different types of cryptocurrencies that can be held in a digital wallet:
+        </p>
+        <p id="coins">- Bitcoin <br>- Ethereum <br>- Litecoin <br>- Cardano <br>- Solana <br>- Dogecoin <br>- Many more</p>
+        <!--<div id="coin-img"><img src="AllCoins.jpg" style="width: 80vw;"></div>-->
     </div> 
 
     <div id="quiz">
         <h3>Question 1</h3>
-        <p><b>What is the name of the technology that cryptocurrencies rely on?</b></p>
+        <p><i><b>What is the name of the technology that cryptocurrencies rely on?</b></i></p>
         <input class="ans" type="radio" name="question1">Cryptography<br></input>
         <input class="ans" type="radio" name="question1" id="correct1">Blockchain<br></input>
         <input class="ans" type="radio" name="question1">Bitcoin<br></input>
         <input class="ans" type="radio" name="question1">Keyboard<br></input>
         <h3>Question 2</h3>
-        <p>filler question</p>
-        <input class="ans" type="radio" name="question2"><br></input>
-        <input class="ans" type="radio" name="question2" ><br></input>
-        <input class="ans" type="radio" name="question2"><br></input>
-        <input class="ans" type="radio" name="question2" id="correct2"><br></input>
+        <p><i><b>What is the name of the process where cryptocrrency coins are created and awarded to users who solve mathematical problems with powerful comptuers?</b></i></p>
+        <input class="ans" type="radio" name="question2">Farming<br></input>
+        <input class="ans" type="radio" name="question2" >Building<br></input>
+        <input class="ans" type="radio" name="question2">Constructing<br></input>
+        <input class="ans" type="radio" name="question2" id="correct2">Mining<br></input>
         <input type="submit" name="submit" value="Submit" id="submitB" onclick="result()">
     </div>
     
