--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 made it more reliant on the internet as well as more vulnerable to hacking.
             </p>
             <p>
-                <b>The purpose of this page</b> is to highlight how computers have positiviely and 
+                <b>The purpose of this website</b> is to highlight how computers have positiviely and 
                 negatively impacted the banking industry, and how computers will continue
                 to impact the sector in the future.
             </p>
