--- a/negatives.html
+++ b/negatives.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -25,28 +26,56 @@
     <div class="content">
         <h1 id="headH1">Negatives</h1>
         <h2>Cybersecurity</h2>
-            <p>Although there are many regulations put in place to protect online users, such as Regulation E which protects users when they are using Electronic funds, which is basically all online transactions</p>
-            <p>There are still serious risks that are posed to consumers when they are online. People can get your account info, and exploit your information.</p>
-            <p>Those who arent technologically versed should be worried about scams. Someone who knows that you arent very technological can try and get you to give them money, permission to things they shouldnt have permission to, plus many other bad things.</p>
-        <h2>Internet reliance</h2>
-            <p>Now more than ever the internet runs the world. Banking is just a part of the world that follows that rule. Online banking depends on technology for it to even exist.</p>
-            <p>Internet reliance also provides more opportunities for users to be vulnerable to cyber threats such as phishing, hackers. Which leads to privacy breaches and data leaks</p>
-            <p>Online, whether by overdrafting or simply missing payments, it is simpler to overpay. Due to more consumers using the Buy Now Pay Later services made possible by online banking, there are now more missed payments.</p>
+            <p>
+                Despite the numerous regulations put in place to safeguard customers, like Regulation 
+                E which protects users when they utilize elctronic funds, there are still significant 
+                risks that customers face while online.
+            </p>
+            <p>
+                The increased reliance on computers and digital systems in banking has exposed financial 
+                institutions to a higher risk of cybersecurity threats. Hackers and cybercriminals 
+                continuously target banks to gain unauthorized access to sensitive customer data, 
+                commit fraud, or disrupt operations.
+            </p>
+            <p>
+                Furthermore, with the digitization of banking, the potential for data breaches 
+                and privacy breaches has increased. If banks fail to implement robust security 
+                measures, they may be vulnerable to data breaches that expose customer information, 
+                including personal and financial details.
+            </p>
+        <h2>Internet Reliance</h2>
+            <p>
+                Banking continues to grow increasingly reliant on technology, which means that technology 
+                has to work consistently or customers face issues that can lead to backlash and loss of business.
+            </p>
+            <p>
+                In the event of system outages or prolonged downtime, customers may experience disruptions in 
+                accessing their accounts, making transactions, or accessing customer support. These interruptions 
+                can lead to frustration, inconvenience, and potential financial losses for both banks and customers.
+            </p>
+            <p>
+                While computers and digital banking have made financial services more accessible to many, 
+                there are still segments of the population, particularly older individuals, who may face 
+                challenges in adapting to digital banking platforms. This digital divide can lead 
+                to financial exclusion and hinder access to banking services for certain demographics.
+            </p>
+            <p>
+                In addition, technology has reduced the need for face-to-face interactions with bank tellers 
+                and other employees. This makes it difficult to address complex financial needs and other issues.
+            </p>
     </div>
 
     <div id="quiz">
         <h3>Question 1</h3>
-        <p>filler text</p>
-        <input class="ans" type="radio" name="question1">1<br></input>
-        <input class="ans" type="radio" name="question1" id="correct1">2<br></input>
-        <input class="ans" type="radio" name="question1">3<br></input>
-        <input class="ans" type="radio" name="question1">4<br></input>
+        <p><i><b>Financial institutions and banks face less risk of cybersecurity threats due to their reliance on computers and digital systems.</b></i></p>
+        <input class="ans" type="radio" name="question1">True<br></input>
+        <input class="ans" type="radio" name="question1" id="correct1">False<br></input>
         <h3>Question 2</h3>
-        <p>filler question</p>
-        <input class="ans" type="radio" name="question2"><br></input>
-        <input class="ans" type="radio" name="question2" ><br></input>
-        <input class="ans" type="radio" name="question2"><br></input>
-        <input class="ans" type="radio" name="question2" id="correct2"><br></input>
+        <p><i><b>What demographic can be affected by banking institutions' reliance on technology?</b></i></p>
+        <input class="ans" type="radio" name="question2">Millenials<br></input>
+        <input class="ans" type="radio" name="question2" >Government Officials<br></input>
+        <input class="ans" type="radio" name="question2">Young Adults<br></input>
+        <input class="ans" type="radio" name="question2" id="correct2">Senior Citizens<br></input>
         <input type="submit" name="submit" value="Submit" id="submitB" onclick="result()">
     </div>
     
