--- a/positives.html
+++ b/positives.html
@@ -25,40 +25,86 @@
     <div class="content">
         <h1 id="headH1"><b>Positives</b></h1>
         <h2>Credit Cards</h2>
-           <p>Credit cards have had a significant positive impact on the banking industry by making banking more accessible and convenient for consumers, enabling them to shop and manage their finances from the comfort of their own homes</p>
-           <p>They provide a useful record of purchasing history, making it easier for consumers to manage their finances.</p>
-           <p>Credit cards can offer fraud protection, reducing the risk of financial loss due to unauthorized, unwanted transactions.</p>
+            <p>
+                Thanks to computers, credit cards become very popoular among the general public 
+                due to their accessibility and convenience, enabling everyone to shop and manage 
+                their money without carrying around larges amounts of cash.
+            </p>
+            <p>
+                Credit cards provide a useful record of purchasing history, making it easier for 
+                consumers to manage their finances and track their purchases.
+            </p>
+            <p>
+                Credit cards can also offer fraud protection, reducing the risk of financial loss 
+                due to unauthorized, unwanted transactions.
+            </p>
+            <p>
+                Not to mention, credit cards have played a significant role in stimulating consumer 
+                spending and driving economic growth, due to the fact that people can make purchases
+                beyond their immediate financial means.
+            </p>
         <h2>Online Banking</h2>
-            <p>Online banking has made managing bank accounts much easier, enabling customers to check their balances, transfer funds, and pay bills at their convenience, without having to visit a physical branch.</p>
-            <p>Online banking provides real-time updates, and notification. This allows for reducing the likelihood of errors and discrepancies.</p>
-            <p>It has accentuated online shopping, as it allows customers to make purchases and payments easily and securely. All while without having to go to an actual bank.</p>
+            <p>
+                Online banking has made it easy for individuals to perform various banking activities, 
+                such as checking account balances, transferring funds, paying bills, and applying for 
+                loans, all from the comfort of their homes using computers.
+            </p>
+            <p>
+                Banks can provide real-time updates and notifications for important financial
+                decisions, which reduces the likelihood of errors and other discrepancies.
+            </p>
+            <p>
+                With online banking, there is no need to visit physical banks, which saves customers 
+                time and money. It also eliminates the need for physical cash and checks. 
+            </p>
         <h2>Mobile Banking</h2>
-            <p>Mobile Banking makes online banking easy, it incorporates aspects of online banking and can <br>
-                integrate it in an easy to use, new and innovative way of banking. While all the featured aspects may not be as complex as they are on online services that aren't mobile. </p>
-            <p> A mobile banking app makes online banking easier for those who may not be familiar with new and modern banking technologies.</p>
-            <p>Mobile Banking as well as Online Banking provide increased financical inclusion. Which grants people the ability for people to meet basic needs such as having clean water,a roof over your head, and a school to go to.</p>
+            <p>
+                Similar to online banking, mobile banking has made accessing finances incredibly easy. Banks
+                make it simple for users to use apps on their phones or tablets to manage their accounts. 
+            </p>
+            <p>
+                Mobile banking apps have enhanced secruity features that protect user data. This includes 
+                features like fingerprint and facial recognition, secure login credentials, and encryption 
+                protocols. 
+            </p>
         <h2>Regulations</h2>
-            <p>The online banking world is subject to stringent regulations and restrictions to ensure the security and privacy of customers' financial information. Including encryption, verification services, and regular audits</p>
-            <p>Online banks impose strict rules on online banking institutions to prevent money laundering, fraud, and other illicit activities. As well as transaction monitoring systems, to detect and report suspicious transactions.</p>
-        <h2>Helping Businesses</h2>
-            <p>Online banking has streamlined financial transactions and reduced administrative overheads, saving businesses time and money.</p>
-            <p>Online banking gives businesses access to real-time financial information, allowing them to make informed decisions and improve financial management.</p>
-            <p>Online banking has expanded businesses' reach by enabling secure and convenient online payment options, facilitating global transactions and opening doors to new markets.</p>
+            <p>
+                The online banking world has been subject to stringent regulations and restrictions to ensure the 
+                security and privacy of customers' financial information, including encryption, verification 
+                services, and regular audits.
+            </p>
+            <p>
+                Online banks impose strict rules on online banking institutions to prevent money laundering, 
+                fraud, and other illicit activities. Banks will also use transaction monitoring systems to detect 
+                and report suspicious transactions.
+            </p>
+        <h2>Business</h2>
+            <p>
+                Online banking has streamlined financial transactions and reduced administrative 
+                overheads, saving businesses' time and money.</p>
+            <p>
+                Businesses get access to real-time financial information, allowing them to make informed 
+                decisions and improve financial management.
+            </p>
+            <p>
+                Online banking has expanded businesses' reach by enabling secure and convenient online 
+                payment options, facilitating global transactions and opening doors to new markets.
+            </p>
     </div>
     
     <div id="quiz">
         <h3>Question 1</h3>
-        <p>filler text</p>
-        <input class="ans" type="radio" name="question1">1<br></input>
-        <input class="ans" type="radio" name="question1" id="correct1">2<br></input>
-        <input class="ans" type="radio" name="question1">3<br></input>
-        <input class="ans" type="radio" name="question1">4<br></input>
+        <p><i><b>What technological development allowed for people to make purchases beyond their immediate financial means?</b></i></p>
+        <input class="ans" type="radio" name="question1">ATMs<br></input>
+        <input class="ans" type="radio" name="question1">Debit Cards<br></input>
+        <input class="ans" type="radio" name="question1" id="correct1">Credit Cards<br></input>
+        <input class="ans" type="radio" name="question1">Mobile Banking<br></input>
         <h3>Question 2</h3>
-        <p>filler question</p>
-        <input class="ans" type="radio" name="question2"><br></input>
-        <input class="ans" type="radio" name="question2" ><br></input>
-        <input class="ans" type="radio" name="question2"><br></input>
-        <input class="ans" type="radio" name="question2" id="correct2"><br></input>
+        <p><i><b>How has online banking made consumers' lives easier?</b></i></p>
+        <input class="ans" type="radio" name="question2">It provides real time updates and notifications<br></input>
+        <input class="ans" type="radio" name="question2" >There is no need to carry cash or visit physical banks<br></input>
+        <input class="ans" type="radio" name="question2">Users can manage their finances from anywhere<br></input>
+        <input class="ans" type="radio" name="question2" id="correct2">All of the above<br></input>
         <input type="submit" name="submit" value="Submit" id="submitB" onclick="result()">
     </div>
     
